# valr-grid-bot-v2

./: .env.example  .gitignore  DEPLOYMENT.md  MEMORY.md  README.md  SECURITY.md  VALR_API_REFERENCE.md  config.json  test_secrets.rs
.openclaw/: workspace-state.json
backtester/results/: top_configs.json
backtester/src/: backtest.py
bots/: Cargo.toml  bot-health-monitor.py  bot-monitor.py  check-balances.py  liquidate-final.py  liquidate-rest.py  liquidate-spot.py  quick-sim.py  sell-all.py  sell-simple.py  sell-to-zar.py  simulate-random-taker.py
bots/bybit-trading/: STRATEGY.md  close-position.py  config.json  daily-report.md  grid-config.md  grid_bot.py  monitor.py  report.py  state.json  trade-log.md
bots/chart-maintenance/: .gitignore  BUILD_SUMMARY.md  QUICKSTART.md  README.md  WEBSOCKET_ARCHITECTURE.md  cm_bot.py  cm_bot.service  config.json
bots/chart-maintenance-rust/: Cargo.toml
bots/chart-maintenance-rust/src/: main.rs
bots/cm-bot-spot/: buy-zar.py  config.json  liquidate.py  liquidate_rest.py  monitor.py  rebalance-now.py  sell-usdpc.py  sell_xstocks.py  state.json
bots/cm-bot-spot-src/: Cargo.toml  README.md  analyze_zar_trades.py  debug_trades.py
bots/cm-bot-spot-src/src/: liquidator.rs  main.rs  price_feed.rs  random_maker.rs  rebalance.rs  ws_client.rs
bots/cm-bot-v2/: .env.example  Cargo.toml  README.md  REDESIGN.md  WEBSOCKET_NOTES.md  config.json  state.json
bots/cm-bot-v2/monitoring/: baseline_2026-04-17_18-40.json  check_monitoring.sh
bots/cm-bot-v2/scripts/: bootstrap_opening_balance.py  build.sh  close_all_positions.py  close_positions.py  close_positions_reduceonly.py  daily_recon.py  deploy.sh  fund_subaccounts.py  internal_offset.py  monthly_reconciliation.py  net_positions.py  offset_all_positions.py  rebalance_usdt.py  recon_log.json  recon_state.json
bots/cm-bot-v2/src/: cleanup.rs  config.rs  cycle.rs  main.rs  pair_info.rs  price_feed.rs  state.rs  types.rs  valr.rs  ws_client.rs
bots/grid-backtester/: README.md  backtest.py  setup-cron.sh
bots/pnl-tracker/: pnl_ledger.json  pnl_report.py
bots/valr-auto-sweep/: .gitignore  API_ENDPOINTS_TO_CONFIRM.md  README.md  SETUP_CHECKLIST.md  config.json  main.py  test_endpoints.py  valr-auto-sweep.service
bots/valr-common/: Cargo.toml
bots/valr-common/src/: client.rs  lib.rs  stream.rs  types.rs
bots/valr-grid-bot-v2/: .gitignore  README.md  (+2 more)
docs/: VALR_PAIRS.md  valr_pairs.json
memory/: 2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-26.md  2026-04-01.md  2026-04-02-1005.md  2026-04-02-stoploss-fix.md  2026-04-06-1633.md  2026-04-06.md  2026-04-07-1325.md  2026-04-07-github-setup.md  2026-04-07-wedding-weather.md  2026-04-07.md  2026-04-08-rate-limit-check.md  2026-04-18.md  2026-04-19.md  2026-04-21-xautzar-fix.md  2026-04-22.md  cache-cost-analysis.md  grid-bot-fix-2026-03-18.md  inv-mm-sub1-state.json
scripts/: bulk_buy_inventory.py  buy_base_inventory.py  quote_replenish.py  spot_rebalance_manual.py  valr_monitor.py  valr_pairs.py  wedding-location.json  wedding-weather.py
skills/valr-futures-grid-bot/: .gitignore  Cargo.toml  README.md  SKILL.md
skills/valr-futures-grid-bot/docs/: BACKTEST_PLAN.md  PACKAGE_INFO.md  QUICKSTART.md
skills/valr-futures-grid-bot/scripts/: secrets.py  setup.sh  validate_config.py
skills/valr-futures-grid-bot/src/: main.rs
test_secrets/: Cargo.toml
tests/: positionManager.test.ts  riskManager.test.ts
(+101 files in other folders)
