[package]
name = "cm_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = "1"
rust_decimal_macros = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
