[package]
name = "valr-futures-grid-bot"
version = "1.0.0"
edition = "2021"
description = "Automated grid trading bot for VALR perpetual futures with native stop-loss"
authors = ["Herman De Bot"]
license = "MIT"

[[bin]]
name = "valr-futures-grid-bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1", features = ["serde-with-str", "maths"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
tokio-tungstenite = "0.20"
futures-util = "0.3"
